KAStatsFavoritesModel: retrieve launched entry by normalized id from m_items list

The problem with m_itemEntries map is that entries are stored there several times
with different keys: normalized id, url and path.

When desktop entry is overriden in user directory, and ksycoca is updated, entry
is reloaded but is still stored in m_itemEntries with the old keys.

This is not a problem for normalized id, but url and path keys will become
incorrect in this case.

Then in trigger() we will get a url of entry found via its normalized id (which
didn't change) and try to find it again using that url. Which doesn't work
because entry->url() returns new url for overridden desktop entry, but
m_itemEntries contains key with the old url.

This change sidesteps this issue by always operating on an entry found via
normalized id, which is simpler and more efficient anyway.

BUG: 512332
FIXED-IN: 6.6.0


(cherry picked from commit 23bd030b2051b4d5d5a74ad23e3487fcde26e443)

8b43c518 KAStatsFavoritesModel: when launching entry, always retrieve entry by its...

Co-authored-by: Alexey Rochev <arochevdev@gmail.com>